# LeFramework

./: CMakeLists.txt  README.md
protected/components/: AppException.php  BaseParser.php  Controller.php  Curl.php  DBConnection.php  Model.php  SystemStatus.php
protected/components/framework/: App.php
protected/config/: constants.php  main.php
protected/controllers/: SiteController.php
protected/data/: collection.ini  schema.sql
protected/models/: Site.php
protected/views/layout/: default.php  main.php  simple.php  slider.php
protected/views/layout/components/: carousel.php  menu.php  sidebar.php
protected/views/site/: about.php  api.php  collection.php  index.php  sysInfo.php  test.php
public/: .htaccess  README.md  api.php  index.php
public/css/: main.css
public/js/: main.js  main.min.js
